2012-06-05  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
	* vim.py tty.py: Fix pyclewn terminal fails to print the output of the
	debuggee.

===============================================================================
2011-12-28  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* netbeans.py: change the RE_UNIDIFF regular expression to take into
	account that Python difflib in Python 2.7.2 and Python 3.2.2 may now omit
	"the comma and trailing value s".
	* debugger.py gdb.py gdbmi.py: Pure vim command implementations cannot be
	invoked as a 'C' parameter. Do not print twice log stream records.
	* gdb.py: Implement the ``define``, ``commands`` and ``document`` gdb
	commands.
	* debugger.py: Only map 'nbkey' when pyclewn keys are being mapped.
	* debugger.py: Fix after changing directory from vim, a second console
	is created after the first one is hidden, which causes problems when
	starting the next session with ':Pyclewn'.
	* setup.py asyncproc.py buffer.py debugger.py gdb.py netbeans.py
	posix.py vim.py: Pyclewn can debug a pyclewn gdb test case.
	* pydb.py: Fix Python issue 13183.
	* debugger.py: Fix a 'RuntimeError: dictionary changed size during
	iteration' occuring when running pdb.
	* debugger.py vim.py testsuite/*py: Use a marker in '(clewn)_console'
	instead of a file to detect the end of processing in a test case.
	* debugger.py gdbmi.py netbeans.py vim.py: Fix the testsuite on
	Windows.
	* debugger.py gdb.py misc.py vim.py testsuite/*py: Remove all the
	sleep statements in the commands that build the test cases. This
	assumes that vim has been patched with the do_sleep() function calling
	netbeans_parse_messages().
	* vim.py testsuite/test_support.py: Testsuite: wait for vim to
	terminate.
	* setup.py: Add the '--prefix' option to 'setup.py test'.
	* setup.py testsuite/*py: Skip tests conditionnaly.
	* simple.py unittest2/*py testsuite/*py: Add unittest2 to the python2
	branch.